Closed Bug 1314186 Opened 8 years ago Closed 8 years ago

LayerTreeOwnerTracker doesn't get re-synchronized to the GPU process when it restarts

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: mattwoodrow, Assigned: mattwoodrow)

References

Details

Attachments

(1 file)

This causes us to fail to initialize PLayerTransactionParents in the new GPU process, since we don't have the layers id mapped.
Attachment #8806187 - Flags: review?(dvander)
Attachment #8806187 - Flags: review?(dvander) → review+
Assignee: nobody → matt.woodrow
Pushed by mwoodrow@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/d02c16e38045 Resync LayerTreeId mappings to the GPU process if it restarts. r=dvander
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: