Bug 1314186 - Resync LayerTreeId mappings to the GPU process if it restarts. r=dvander